--- a/packages/react-scripts/template/public/visualforce.html
+++ b/packages/react-scripts/template/public/visualforce.html
@@ -1,9 +1,16 @@
-<!doctype html>
+<apex:page
+  controller="%SFDC_PREFIX%Controller"
+  docType="html-5.0"
+  applyHtmlTag="false"
+  applyBodyTag="false"
+  showHeader="false"
+  standardStylesheets="false"
+>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -13,12 +20,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!--
-      Just the polyfills you need for your site, tailored to each browser.
-      For more information, visit https://polyfill.io/v2/docs/
-    -->
-    <script src="//polyfill.io/v2/polyfill.min.js"></script>
     <title>React App</title>
+    <base href="{!$Resource.%SFDC_PREFIX%}/" />
   </head>
   <body>
     <div id="root"></div>
@@ -32,6 +35,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    testing
   </body>
 </html>
+</apex:page>
