--- a/packages/react-scripts/template/public/visualforce.html
+++ b/packages/react-scripts/template/public/visualforce.html
@@ -1,12 +1,7 @@
-<apex:page
-  controller="%SFDC_PREFIX%Controller"
-  docType="html-5.0"
-  applyHtmlTag="false"
-  applyBodyTag="false"
-  showHeader="false"
-  standardStylesheets="false"
->
-<html lang="en">
+<apex:page controller="%SFDC_PREFIX%Controller" docType="html-5.0" applyHtmlTag="false" applyBodyTag="false" showHeader="false"
+  standardStylesheets="false">
+  <html lang="en">
+
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -21,8 +16,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <base href="{!$Resource.%SFDC_PREFIX%}/" />
   </head>
+
   <body>
     <div id="root"></div>
     <!--
@@ -36,5 +31,6 @@
       To create a production bundle, use `npm run build`.
     -->
   </body>
-</html>
+
+  </html>
 </apex:page>
