--- a/packages/react-scripts/template/public/visualforce.html
+++ b/packages/react-scripts/template/public/visualforce.html
@@ -1,10 +1,11 @@
-<apex:page controller="%SFDC_PREFIX%Controller" docType="html-5.0" applyHtmlTag="false" applyBodyTag="false" showHeader="false"
-  standardStylesheets="false">
+<apex:page controller="%SFDC_PREFIX%Controller" docType="html-5.0" applyHtmlTag="false"
+  applyBodyTag="false" showHeader="false" standardStylesheets="false">
   <html lang="en">
 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
@@ -13,7 +14,7 @@
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+      Learn how to configure a non-root public URL by running `yarn build`.
     -->
     <title>React App</title>
   </head>
@@ -27,8 +28,8 @@
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start`.
-      To create a production bundle, use `npm run build`.
+      To begin the development, run `yarn start`.
+      To create a production bundle, use `yarn build`.
     -->
   </body>
 
