--- a/packages/react-scripts/template/public/visualforce.html
+++ b/packages/react-scripts/template/public/visualforce.html
@@ -1,21 +1,22 @@
-<apex:page controller="%SFDC_PREFIX%Controller" docType="html-5.0" applyHtmlTag="false"
-  applyBodyTag="false" showHeader="false" standardStylesheets="false">
+<apex:page controller="%SFDC_PREFIX%Controller" docType="html-5.0" applyHtmlTag="false" applyBodyTag="false"
+  showHeader="false" standardStylesheets="false">
   <html lang="en">
 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <base href="%PUBLIC_URL%/" />
+    <script>webpackPublicPath = '%PUBLIC_URL%/';</script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `yarn build`.
+      The global variable webpackPublicPath is used internally
+      by Webpack to provide it the correct `public` folder path
+      so it can reference resources from code.
     -->
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>React App</title>
   </head>
 
