Move package.json sfdc config to .env
Enable absolute paths under `src` on init

--- a/packages/react-scripts/template/public/visualforce.html
+++ b/packages/react-scripts/template/public/visualforce.html
@@ -1,4 +1,4 @@
-<apex:page controller="%SFDC_PREFIX%Controller" docType="html-5.0" applyHtmlTag="false" applyBodyTag="false"
+<apex:page controller="%REACT_APP_SF_PREFIX%Controller" docType="html-5.0" applyHtmlTag="false" applyBodyTag="false"
   showHeader="false" standardStylesheets="false">
   <html lang="en">
 
