--- a/packages/react-scripts/template/src/App.css
+++ b/packages/react-scripts/template/src/App.css
@@ -2,23 +2,23 @@
   text-align: center;
 }
 
-.logo {
-  animation: logo-spin infinite 20s linear;
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.header {
+.App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.intro {
+.App-intro {
   font-size: large;
 }
 
-@keyframes logo-spin {
+@keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
